--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.6.3",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "html2canvas": "^1.4.1",
+    "lucide-react": "^0.279.0",
+    "mapbox-gl": "^2.15.0",
     "next": "13.5.2",
+    "polyline": "^0.2.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "react-map-gl": "^7.1.6",
+    "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "20.6.3",
+    "@types/polyline": "^0.1.30",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
     "typescript": "5.2.2"
   }
 }
